--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;0,500;1,400;1,500&display=swap');
 
@@ -28,43 +28,51 @@ pre code {
 }
 
 h1 {
-  font-family: 'Bungee Shade', sans-serif;
+  font-family: 'Playfair Display', sans-serif;
   color: #FF8021;
+  font-weight: 900;
+
 }
 
 h2 {
-  font-family: 'Bungee Shade', sans-serif;
+  font-family: 'Playfair Display', serif;
   color: #1BADE3;
+  font-weight: 900;
+
 }
 
 h3 {
-  font-family: 'Roboto Mono', Monospace;
+  font-family: 'Playfair Display', serif;
   color: #81D31A;
-  font-weight: 500;
+  font-weight: 900;
 
 }
 
 h4 {
-  font-family: 'Roboto Mono', Monospace;
+  font-family: 'Playfair Display', serif;
   color: #34AC8B;
-  font-weight: 500;
+  font-weight: 900;
 
 }
 
 h5 {
-  font-family: 'Roboto Mono', Monospace;
+  font-family: 'Playfair Display', serif;
 
 }
 
 .title {
-  font-family: 'Bungee Shade', sans-serif;
+  font-family: 'Playfair Display', serif;
   font-size: 3em !important;
   color: #4E67C8;
+  font-weight: 900;
+
  }
 
 .subtitle {
-  font-family: 'Bungee Shade', serif;
+  font-family: 'Playfair Display', serif;
   color: #2c6793;
+  font-weight: 500;
+
 }
 
 /*-----Body Links-------*/
